After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789786 - Fix object path for sync settings and write a migrator
Fix object path for sync settings and write a migrator
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Sync
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-01 18:41 UTC by Michael Catanzaro
Modified: 2017-11-01 19:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix location of sync settings and add a migrator (8.35 KB, patch)
2017-11-01 19:24 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2017-11-01 18:41:47 UTC
Sync settings are stored in dconf under the object path /org/gnome/Epiphany, but all our other settings are under /org/gnome/epiphany. Let's write a migrator....
Comment 1 Michael Catanzaro 2017-11-01 18:44:20 UTC
This isn't quite right... we're using /Epiphany for all relocatable schemas. That's not what's specified in the gschema.xml, but I suppose the paths there are probably ignored, because it's relocatable, after all.
Comment 2 Michael Catanzaro 2017-11-01 18:48:19 UTC
(In reply to Michael Catanzaro from comment #1)
> This isn't quite right... we're using /Epiphany for all relocatable schemas.
> That's not what's specified in the gschema.xml, but I suppose the paths
> there are probably ignored, because it's relocatable, after all.

But in ephy-settings.c, ephy_settings_init(), I see /org/gnome/epiphany used for the path. Hmm, I'm thoroughly confused now.
Comment 3 Michael Catanzaro 2017-11-01 18:52:22 UTC
Ah, I'm dumb. It's only a problem for sync settings, which are not relocatable.

I had accidentally set an /org/gnome/Epiphany/web setting in the past, which did nothing because it should have been /org/gnome/epiphany/web. That's why I was confused.
Comment 4 Michael Catanzaro 2017-11-01 19:24:22 UTC
Created attachment 362776 [details] [review]
Fix location of sync settings and add a migrator

Unfortunately we have to keep the old schema around indefinitely, to
not break migrations.
Comment 5 Gabriel Ivașcu 2017-11-01 19:39:21 UTC
Review of attachment 362776 [details] [review]:

LGTM! Thanks for fixing this!
Comment 6 Gabriel Ivașcu 2017-11-01 19:43:59 UTC
Attachment 362776 [details] pushed as c9860e4 - Fix location of sync settings and add a migrator