Fix location of sync settings and add a migrator

Unfortunately we have to keep the old schema around indefinitely, to
not break migrations.

https://bugzilla.gnome.org/show_bug.cgi?id=789786